--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "cSpell.language": "en, ru",
-    "window.zoomLevel": 1
+    "window.zoomLevel": 0,
+    "editor.fontSize": 16,
+    "scm.inputFontSize": 16,
+    "terminal.integrated.fontSize": 14,
+    "markdown.preview.fontSize": 16,
+    "debug.console.fontSize": 16,
+    "screencastMode.fontSize": 20
 }
