--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-router": "^5.1.19",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.5",
     "immutability-helper": "^3.1.1",
     "react": "^18.2.0",
