--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-mock-store": "^1.0.3",
     "@types/uuid": "^9.0.0",
+    "cypress": "^12.4.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "fetch-mock": "^9.11.0",
     "react-test-renderer": "^18.2.0",
     "redux-mock-store": "^1.5.4"
